@@ -203,7 +203,7 @@ Number of backends in \fBactive\fR state when backends is executing a queries.
 
 .B waiting
 .RS
-Number of backends which is currently waiting on a lock.
+Number of backends which is currently waiting on a lock. This value is based on pg_stat_activity and depends on PostgreSQL version. In PostgreSQL versions before 9.5 it accounts number of connections with "pg_stat_activity.waiting = true". In version 9.6 waiting column has been replaced with wait_event and wait_event_type columns and pgcenter accounts connections with "pg_stat_activity.wait_event IS NOT NULL". In PostgreSQL 10, number of possible values of wait_event and wait_event_type has been extended and rule of accounting becomes inaccurate, so since version 10 waiting connections accounts with "pg_stat_activity.wait_event_type = 'Lock'" condition.
 .RE
 
 .B others
